--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ img {
   width: 99.5vw;
   height: 98vh;
   border: 2% solid #444;
-  border-radius: 200px;
+  border-radius: calc(100vw / 8);
   position: fixed;
   top: 1vh;
   z-index: -1000;
